==> savvn001/STM32_FLIGHT_CONTROLLER/Drivers/MPU9250.c <==
#include "MPU9250.h"
#include "stm32f4xx_hal.h"
#include "arm_math.h"

void magcalMPU9250(uint8_t MPUnum, float * dest1, float * dest2) {
	uint16_t ii = 0, sample_count = 0;
	int32_t mag_bias[3] = { 0, 0, 0 }, mag_scale[3] = { 0, 0, 0 };
	int16_t mag_max[3] = { -32767, -32767, -32767 }, mag_min[3] = { 32767,
			32767, 32767 }, mag_temp[3] = { 0, 0, 0 };
	uint8_t rawData[7] = { 0, 0, 0, 0, 0, 0, 0 }, magCalibration[3] =
			{ 0, 0, 0 };

	printf("Mag Calibration for: 0x  \r\n ");
	// printf(MPUnum, HEX);
	printf("Wave device in a figure eight until done!  \r\n ");
	HAL_Delay(4000);

// shoot for ~fifteen seconds of mag data
	if (_Mmode == 0x02)
		sample_count = 128; // at 8 Hz ODR, new mag data is available every 125 ms
	if (_Mmode == 0x06)
		sample_count = 500;	//1500; // at 100 Hz ODR, new mag data is available every 10 ms



	for (ii = 0; ii < sample_count; ii++) {
		writeByte(MPUnum, I2C_SLV0_ADDR, AK8963_ADDRESS | 0x80); // Set the I2C slave address of AK8963 and set for read.
		writeByte(MPUnum, I2C_SLV0_REG, AK8963_XOUT_L); // I2C slave 0 register address from where to begin data transfer
		writeByte(MPUnum, I2C_SLV0_CTRL, 0x87);   // Enable I2C and read 7 bytes
		if (_Mmode == 0x02)
			HAL_Delay(125); // at 8 Hz ODR, new mag data is available every 125 ms
		if (_Mmode == 0x06)
			HAL_Delay(10); // at 100 Hz ODR, new mag data is available every 10 ms
		readBytes(MPUnum, EXT_SENS_DATA_00, 7, &rawData[0]); // Read the x-, y-, and z-axis calibration values
		mag_temp[0] = ((int16_t) rawData[1] << 8) | rawData[0]; // Turn the MSB and LSB into a signed 16-bit value
		mag_temp[1] = ((int16_t) rawData[3] << 8) | rawData[2]; // Data stored as little Endian
		mag_temp[2] = ((int16_t) rawData[5] << 8) | rawData[4];

		for (int jj = 0; jj < 3; jj++) {
			if (mag_temp[jj] > mag_max[jj])
				mag_max[jj] = mag_temp[jj];
			if (mag_temp[jj] < mag_min[jj])
				mag_min[jj] = mag_temp[jj];
		}
	}


	printf("mag x min/max:  \r\n ");
	printf("%d \n\r", mag_max[0]);
	printf("%d \n\r", mag_min[0]);
	printf("mag y min/max:  \r\n ");
	printf("%d \n\r", mag_max[1]);
	printf("%d \n\r", mag_min[1]);
	printf("mag z min/max:  \r\n ");
	printf("%d \n\r", mag_max[2]);
	printf("%d \n\r", mag_min[2]);

	// Get hard iron correction
	mag_bias[0] = (mag_max[0] + mag_min[0]) / 2; // get average x mag bias in counts
	mag_bias[1] = (mag_max[1] + mag_min[1]) / 2; // get average y mag bias in counts
	mag_bias[2] = (mag_max[2] + mag_min[2]) / 2; // get average z mag bias in counts

	writeByte(MPUnum, I2C_SLV0_ADDR, AK8963_ADDRESS | 0x80); // Set the I2C slave address of AK8963 and set for read.
	writeByte(MPUnum, I2C_SLV0_REG, AK8963_ASAX); // I2C slave 0 register address from where to begin data transfer
	writeByte(MPUnum, I2C_SLV0_CTRL, 0x83);       // Enable I2C and read 3 bytes
	HAL_Delay(50);
	readBytes(MPUnum, EXT_SENS_DATA_00, 3, &rawData[0]); // Read the x-, y-, and z-axis calibration values
	magCalibration[0] = (float) (rawData[0] - 128) / 256.0f + 1.0f; // Return x-axis sensitivity adjustment values, etc.
	magCalibration[1] = (float) (rawData[1] - 128) / 256.0f + 1.0f;
	magCalibration[2] = (float) (rawData[2] - 128) / 256.0f + 1.0f;

	dest1[0] = (float) mag_bias[0] * _mRes * magCalibration[0]; // save mag biases in G for main program
	dest1[1] = (float) mag_bias[1] * _mRes * magCalibration[1];
	dest1[2] = (float) mag_bias[2] * _mRes * magCalibration[2];

	// Get soft iron correction estimate
	mag_scale[0] = (mag_max[0] - mag_min[0]) / 2; // get average x axis max chord length in counts
	mag_scale[1] = (mag_max[1] - mag_min[1]) / 2; // get average y axis max chord length in counts
	mag_scale[2] = (mag_max[2] - mag_min[2]) / 2; // get average z axis max chord length in counts

	float avg_rad = mag_scale[0] + mag_scale[1] + mag_scale[2];
	avg_rad /= 3.0;

	dest2[0] = avg_rad / ((float) mag_scale[0]);
	dest2[1] = avg_rad / ((float) mag_scale[1]);
	dest2[2] = avg_rad / ((float) mag_scale[2]);

	printf("Mag Calibration done!");
}

void writeByte(uint8_t address, uint8_t subAddress, uint8_t data)

{
	uint8_t data_write[2];
	data_write[0] = subAddress;
	data_write[1] = data;

	HAL_I2C_Master_Transmit(&hi2c2, 0xD0, data_write, 2, 10);

}

uint8_t readByte(uint8_t address, uint8_t subAddress) {
	uint8_t data[1]; // `data` will store the register data
	uint8_t data_write[1];
	data_write[0] = subAddress;

	HAL_I2C_Master_Transmit(&hi2c2, 0xD0, data_write, 1, 10); //Send adress of register ONLY
	HAL_I2C_Master_Receive(&hi2c2, 0xD1, data, 1, 10);

	return data[0];

}

void readBytes(uint8_t address, uint8_t subAddress, uint8_t count,
		uint8_t * dest) {

	uint8_t data_write[1];
	data_write[0] = subAddress;

	HAL_I2C_Master_Transmit(&hi2c2, 0xD0, data_write, 1, 10);
	HAL_I2C_Master_Receive(&hi2c2, 0xD1, dest, count, 10);

}
